# sailing-conditions

./: README.md  pyproject.toml
sailing_conditions/: cities.py  cli.py  config.py  emoji.py  fetchers.py  forecast.py  formatters.py  parsers.py  pyproject.toml  senders.py
