[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sailing-conditions"
version = "0.1.0"
description = "Quick sailing condition summaries across multiple cities"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name="Thomas Plummer", email="example@example.com" }
]

dependencies = [
    "requests",
]

[project.scripts]
sailing-conditions = "sailing_conditions.cli:main"
