[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sailing-conditions"
version = "0.1.0"
description = "Quick sailing condition summaries (1–10 rating, Wind / Waves / Sky)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thomas Plummer" }]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sailing-conditions = "sailing_conditions.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sailing_conditions*"]